# Template

./: CodingStyle.txt  INSTALL  Makefile.am  README  README.md  configure.ac
Template/: Bar.cc  Bar.h  Foo.cc  Foo.h  Makefile.am  Template.h
docs/: Makefile.am
src/: Makefile.am  helloworld.cc
tests/: Makefile.am  tests.cc
